--- a/Stretchy Snacks/Base.lproj/Main.storyboard
+++ b/Stretchy Snacks/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6L5-Wq-PrH">
-                                        <rect key="frame" x="339" y="9" width="36" height="47"/>
+                                        <rect key="frame" x="339" y="9" width="36" height="54"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <state key="normal" title="＋"/>
                                         <connections>
@@ -32,14 +32,13 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="6L5-Wq-PrH" secondAttribute="bottom" constant="8" id="Zwf-WG-8oM"/>
                                     <constraint firstItem="6L5-Wq-PrH" firstAttribute="top" secondItem="LGA-9B-cEO" secondAttribute="top" constant="9" id="frR-OY-i4m"/>
-                                    <constraint firstAttribute="height" constant="64" id="oqn-yP-mxL"/>
+                                    <constraint firstAttribute="height" priority="999" constant="64" id="oqn-yP-mxL"/>
                                     <constraint firstAttribute="trailing" secondItem="6L5-Wq-PrH" secondAttribute="trailing" id="y45-pQ-K5Z"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="LGA-9B-cEO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8bn-yv-W6P"/>
                             <constraint firstItem="LGA-9B-cEO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Fth-xi-QjN"/>
@@ -48,6 +47,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="navBar" destination="LGA-9B-cEO" id="A98-uy-PI1"/>
                         <outlet property="navBarHeight" destination="oqn-yP-mxL" id="QYC-5J-GnA"/>
                         <outlet property="plusButtonOutlet" destination="6L5-Wq-PrH" id="mQN-TC-W8r"/>
                     </connections>
