--- a/Stretchy Snacks/Base.lproj/Main.storyboard
+++ b/Stretchy Snacks/Base.lproj/Main.storyboard
@@ -37,8 +37,39 @@
                                     <constraint firstAttribute="trailing" secondItem="6L5-Wq-PrH" secondAttribute="trailing" id="y45-pQ-K5Z"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qw4-Kd-P4f">
+                                <rect key="frame" x="0.0" y="63" width="375" height="604"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FoodNameCell" id="5Y7-X6-Vib" customClass="FoodNameCellTableViewCell" customModule="Stretchy_Snacks" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Y7-X6-Vib" id="BL5-ID-l3P">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxa-BQ-bJZ">
+                                                    <rect key="frame" x="15" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="foodNameLabel" destination="Pxa-BQ-bJZ" id="QUx-he-6RX"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Lti-Ow-Qwm"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="6EF-eF-y7J"/>
+                                    <outlet property="prefetchDataSource" destination="BYZ-38-t0r" id="uwS-Sl-zCb"/>
+                                </connections>
+                            </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="LGA-9B-cEO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8bn-yv-W6P"/>
                             <constraint firstItem="LGA-9B-cEO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Fth-xi-QjN"/>
@@ -50,6 +81,7 @@
                         <outlet property="navBar" destination="LGA-9B-cEO" id="A98-uy-PI1"/>
                         <outlet property="navBarHeight" destination="oqn-yP-mxL" id="QYC-5J-GnA"/>
                         <outlet property="plusButtonOutlet" destination="6L5-Wq-PrH" id="mQN-TC-W8r"/>
+                        <outlet property="tableView" destination="Qw4-Kd-P4f" id="API-FV-NXd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
